[package]
name = "derive_get"
version = "0.1.0"
authors = ["Paulo <paulosanz@poli.ufrj.br>"]
license = "MIT"
edition = "2018"

categories = ["development-tools::procedural-macro-helpers"]
keywords = ["macro", "getter", "getters"]
readme = "README.md"
repository = "https://github.com/paulocsanz/getset"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
proc-macro2 = { version = "1", default-features = false }
proc-macro-error = "1.0"
